feat: better naming and recipe dedupe

--- a/notebooks/A2_Production_Inference.ipynb
+++ b/notebooks/A2_Production_Inference.ipynb
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -71,10 +71,10 @@
         "from recipe_recommender.config import get_ml_config\n",
         "\n",
         "# Streams/filters combined_events.csv to user-level interaction list for recipes\n",
-        "from recipe_recommender.utils.fetch_user_interactions import UserInteractionFetcher\n",
+        "from recipe_recommender.etl.fetch_user_interactions import UserInteractionFetcher\n",
         "\n",
         "# Loads saved LightGBM + metadata, builds user profile features, scores all recipes\n",
-        "from recipe_recommender.inference.production_recipe_scorer import ProductionRecipeScorer\n",
+        "from recipe_recommender.inference.recipe_scorer import RecipeScorer\n",
         "\n",
         "config = get_ml_config()\n",
         "print(\"Model dir:\", config.model_dir)\n",
@@ -91,19 +91,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2025-09-26 12:33:20,431 - recipe_recommender.utils.fetch_user_interactions - INFO - Initialized UserInteractionFetcher\n",
-            "2025-09-26 12:33:20,434 - recipe_recommender.utils.fetch_user_interactions - INFO -    Events file: /Users/marcelqayoomtaylor/Documents/GitHub/PantryPalML/recipe_recommender/output/combined_events.csv\n",
-            "2025-09-26 12:33:20,435 - recipe_recommender.utils.fetch_user_interactions - INFO -    Tracking 8 event types\n",
-            "2025-09-26 12:33:20,436 - recipe_recommender.utils.fetch_user_interactions - INFO - Fetching interactions for user: afcacbe1-eaba-415f-b03e-14ed682af65e\n",
-            "2025-09-26 12:33:20,438 - recipe_recommender.utils.fetch_user_interactions - INFO - Reading events file in chunks\n",
-            "2025-09-26 12:33:20,633 - recipe_recommender.utils.fetch_user_interactions - INFO -    Processed 50,000 rows, found 0 matches...\n"
+            "2025-09-29 17:30:41,302 - recipe_recommender.etl.fetch_user_interactions - INFO - Initialized UserInteractionFetcher\n",
+            "2025-09-29 17:30:41,302 - recipe_recommender.etl.fetch_user_interactions - INFO -    Events file: /Users/marcelqayoomtaylor/Documents/GitHub/PantryPalML/recipe_recommender/output/combined_events.csv\n",
+            "2025-09-29 17:30:41,303 - recipe_recommender.etl.fetch_user_interactions - INFO -    Tracking 8 event types\n",
+            "2025-09-29 17:30:41,304 - recipe_recommender.etl.fetch_user_interactions - INFO - Fetching interactions for user: afcacbe1-eaba-415f-b03e-14ed682af65e\n",
+            "2025-09-29 17:30:41,304 - recipe_recommender.etl.fetch_user_interactions - INFO - Reading events file in chunks\n",
+            "2025-09-29 17:30:41,397 - recipe_recommender.etl.fetch_user_interactions - INFO -    Processed 50,000 rows, found 0 matches...\n",
+            "2025-09-29 17:30:41,423 - recipe_recommender.etl.fetch_user_interactions - INFO - Found 74 recipe interactions for user afcacbe1-eaba-415f-b03e-14ed682af65e\n",
+            "2025-09-29 17:30:41,423 - recipe_recommender.etl.fetch_user_interactions - INFO -    Processed 63,662 total events\n",
+            "2025-09-29 17:30:41,424 - recipe_recommender.etl.fetch_user_interactions - INFO -    Time range: 2025-06-03 to 2025-08-24\n",
+            "2025-09-29 17:30:41,424 - recipe_recommender.etl.fetch_user_interactions - INFO -    Event breakdown: {'Recipe Added To Collections': 10, 'Recipe Removed From Collections': 2, 'Recipe Link Clicked': 31, 'Recipe Cook Started': 9, 'Recipe Cooked': 8, 'Recipe Search Queried': 14}\n",
+            "2025-09-29 17:30:41,425 - recipe_recommender.inference.recipe_scorer - INFO - Initializing Recipe Scorer\n",
+            "2025-09-29 17:30:41,425 - recipe_recommender.inference.recipe_scorer - INFO - Loading trained model components...\n",
+            "2025-09-29 17:30:41,430 - recipe_recommender.inference.recipe_scorer - INFO - Loaded LIGHTGBM model\n",
+            "2025-09-29 17:30:41,431 - recipe_recommender.inference.recipe_scorer - INFO - Loaded model metadata with 21 features\n",
+            "2025-09-29 17:30:41,444 - recipe_recommender.inference.recipe_scorer - INFO - Loaded raw recipe features from enhanced_recipe_features_from_db.csv\n",
+            "2025-09-29 17:30:41,445 - recipe_recommender.inference.recipe_scorer - INFO - Loaded 1967 recipes for scoring\n",
+            "2025-09-29 17:30:41,445 - recipe_recommender.inference.recipe_scorer - INFO - Scoring 1967 recipes for user\n"
           ]
         },
         {
@@ -117,21 +128,10 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2025-09-26 12:33:20,681 - recipe_recommender.utils.fetch_user_interactions - INFO - Found 74 recipe interactions for user afcacbe1-eaba-415f-b03e-14ed682af65e\n",
-            "2025-09-26 12:33:20,682 - recipe_recommender.utils.fetch_user_interactions - INFO -    Processed 63,662 total events\n",
-            "2025-09-26 12:33:20,686 - recipe_recommender.utils.fetch_user_interactions - INFO -    Time range: 2025-06-03 to 2025-08-24\n",
-            "2025-09-26 12:33:20,688 - recipe_recommender.utils.fetch_user_interactions - INFO -    Event breakdown: {'Recipe Added To Collections': 10, 'Recipe Removed From Collections': 2, 'Recipe Link Clicked': 31, 'Recipe Cook Started': 9, 'Recipe Cooked': 8, 'Recipe Search Queried': 14}\n",
-            "2025-09-26 12:33:20,696 - recipe_recommender.inference.production_recipe_scorer - INFO - Initializing Production Recipe Scorer\n",
-            "2025-09-26 12:33:20,720 - recipe_recommender.inference.production_recipe_scorer - INFO - Loading trained model components...\n",
-            "2025-09-26 12:33:20,743 - recipe_recommender.inference.production_recipe_scorer - INFO - Loaded LIGHTGBM model\n",
-            "2025-09-26 12:33:20,773 - recipe_recommender.inference.production_recipe_scorer - INFO - Loaded model metadata with 21 features\n",
-            "2025-09-26 12:33:20,847 - recipe_recommender.inference.production_recipe_scorer - INFO - Loaded raw recipe features from enhanced_recipe_features_from_db.csv\n",
-            "2025-09-26 12:33:20,850 - recipe_recommender.inference.production_recipe_scorer - INFO - Loaded 1967 recipes for scoring\n",
-            "2025-09-26 12:33:20,914 - recipe_recommender.inference.production_recipe_scorer - INFO - Scoring 1967 recipes for user\n",
-            "2025-09-26 12:33:21,030 - recipe_recommender.inference.production_recipe_scorer - INFO - Generated scores for 1967 recipes\n",
-            "2025-09-26 12:33:21,036 - recipe_recommender.inference.production_recipe_scorer - INFO -    Score range: -1.9474 - 0.1856\n",
-            "2025-09-26 12:33:21,041 - recipe_recommender.inference.production_recipe_scorer - INFO -    No threshold; selecting by top-N\n",
-            "2025-09-26 12:33:21,044 - recipe_recommender.inference.production_recipe_scorer - INFO -    Returning top 10 recommendations\n"
+            "2025-09-29 17:30:41,522 - recipe_recommender.inference.recipe_scorer - INFO - Generated scores for 1967 recipes\n",
+            "2025-09-29 17:30:41,523 - recipe_recommender.inference.recipe_scorer - INFO -    Score range: -0.0465 - -0.0171\n",
+            "2025-09-29 17:30:41,523 - recipe_recommender.inference.recipe_scorer - INFO -    No threshold; selecting by top-N\n",
+            "2025-09-29 17:30:41,524 - recipe_recommender.inference.recipe_scorer - INFO -    Returning top 10 recommendations\n"
           ]
         },
         {
@@ -163,80 +163,80 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>232</td>\n",
-              "      <td>Chicken with Creamy Marsala Sauce</td>\n",
-              "      <td>0.185556</td>\n",
+              "      <td>1228</td>\n",
+              "      <td>Mexican Shrimp</td>\n",
+              "      <td>-0.017054</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>1082</td>\n",
-              "      <td>Thai Drunken Noodles (Pad Kee Mao)</td>\n",
-              "      <td>0.185556</td>\n",
+              "      <td>1232</td>\n",
+              "      <td>Instant Pot Chicken Mole</td>\n",
+              "      <td>-0.017054</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>1090</td>\n",
-              "      <td>Thai Prawn, Mango and Avocado Noodle Salad</td>\n",
-              "      <td>0.185556</td>\n",
+              "      <td>1264</td>\n",
+              "      <td>Carrot Cake Muffins</td>\n",
+              "      <td>-0.017054</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>1773</td>\n",
-              "      <td>Naan Pizza</td>\n",
-              "      <td>0.178623</td>\n",
+              "      <td>1338</td>\n",
+              "      <td>Crock Pot Chicken Tortilla Soup</td>\n",
+              "      <td>-0.017054</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>278</td>\n",
-              "      <td>Chop Suey (Chicken Stir Fry)</td>\n",
-              "      <td>0.153619</td>\n",
+              "      <td>1440</td>\n",
+              "      <td>Slow Cooker Butter Chicken</td>\n",
+              "      <td>-0.017054</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>1077</td>\n",
-              "      <td>Thai Chicken Peanut Noodles</td>\n",
-              "      <td>0.153619</td>\n",
+              "      <td>1483</td>\n",
+              "      <td>Pumpkin Monkey Bread</td>\n",
+              "      <td>-0.017054</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
-              "      <td>20</td>\n",
-              "      <td>Asian Salmon Salad</td>\n",
-              "      <td>0.124245</td>\n",
+              "      <td>1537</td>\n",
+              "      <td>Chile Verde Pork</td>\n",
+              "      <td>-0.017054</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
-              "      <td>665</td>\n",
-              "      <td>Mapo Tofu</td>\n",
-              "      <td>0.123119</td>\n",
+              "      <td>1589</td>\n",
+              "      <td>Healthy Cranberry Apricot Bars</td>\n",
+              "      <td>-0.017054</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
-              "      <td>219</td>\n",
-              "      <td>Chicken Stir Fry with Rice Noodles</td>\n",
-              "      <td>0.099241</td>\n",
+              "      <td>1601</td>\n",
+              "      <td>Moroccan Meatballs</td>\n",
+              "      <td>-0.017054</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
-              "      <td>247</td>\n",
-              "      <td>Chinese Chicken Salad with Asian Peanut Salad ...</td>\n",
-              "      <td>0.099241</td>\n",
+              "      <td>1606</td>\n",
+              "      <td>Instant Pot Vegetarian Chili</td>\n",
+              "      <td>-0.017054</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "  recipe_id                                        recipe_name     score\n",
-              "0       232                  Chicken with Creamy Marsala Sauce  0.185556\n",
-              "1      1082                 Thai Drunken Noodles (Pad Kee Mao)  0.185556\n",
-              "2      1090         Thai Prawn, Mango and Avocado Noodle Salad  0.185556\n",
-              "3      1773                                         Naan Pizza  0.178623\n",
-              "4       278                       Chop Suey (Chicken Stir Fry)  0.153619\n",
-              "5      1077                        Thai Chicken Peanut Noodles  0.153619\n",
-              "6        20                                 Asian Salmon Salad  0.124245\n",
-              "7       665                                          Mapo Tofu  0.123119\n",
-              "8       219                 Chicken Stir Fry with Rice Noodles  0.099241\n",
-              "9       247  Chinese Chicken Salad with Asian Peanut Salad ...  0.099241"
+              "  recipe_id                      recipe_name     score\n",
+              "0      1228                   Mexican Shrimp -0.017054\n",
+              "1      1232         Instant Pot Chicken Mole -0.017054\n",
+              "2      1264              Carrot Cake Muffins -0.017054\n",
+              "3      1338  Crock Pot Chicken Tortilla Soup -0.017054\n",
+              "4      1440       Slow Cooker Butter Chicken -0.017054\n",
+              "5      1483             Pumpkin Monkey Bread -0.017054\n",
+              "6      1537                 Chile Verde Pork -0.017054\n",
+              "7      1589   Healthy Cranberry Apricot Bars -0.017054\n",
+              "8      1601               Moroccan Meatballs -0.017054\n",
+              "9      1606     Instant Pot Vegetarian Chili -0.017054"
             ]
           },
           "metadata": {},
@@ -273,7 +273,7 @@
         "interactions = fetcher.fetch_user_interactions(sample_user_id)\n",
         "\n",
         "# Loads saved booster + metadata, builds user profile features, scores all recipes\n",
-        "scorer = ProductionRecipeScorer(config)\n",
+        "scorer = RecipeScorer(config)\n",
         "# Returns ranked recommendations with scores and metadata\n",
         "result = scorer.get_user_recipe_recommendations(sample_user_id, interactions, n_recommendations=10)\n",
         "\n",
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -296,7 +296,7 @@
           "output_type": "stream",
           "text": [
             "SMOKE TEST: PASS\n",
-            "Top recommendation: Chicken with Creamy Marsala Sauce (score=0.1856)\n"
+            "Top recommendation: Mexican Shrimp (score=-0.0171)\n"
           ]
         }
       ],
