feat: working ranker

--- a/notebooks/A2_Production_Inference.ipynb
+++ b/notebooks/A2_Production_Inference.ipynb
@@ -118,30 +118,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2025-09-29 21:37:49,682 - recipe_recommender.etl.fetch_user_interactions - INFO - Initialized UserInteractionFetcher\n",
-            "2025-09-29 21:37:49,682 - recipe_recommender.etl.fetch_user_interactions - INFO -    Events file: /Users/marcelqayoomtaylor/Documents/GitHub/PantryPalML/recipe_recommender/output/combined_events.csv\n",
-            "2025-09-29 21:37:49,682 - recipe_recommender.etl.fetch_user_interactions - INFO -    Tracking 8 event types\n",
-            "2025-09-29 21:37:49,683 - recipe_recommender.etl.fetch_user_interactions - INFO - Fetching interactions for user: afcacbe1-eaba-415f-b03e-14ed682af65e\n",
-            "2025-09-29 21:37:49,683 - recipe_recommender.etl.fetch_user_interactions - INFO - Reading events file in chunks\n",
-            "2025-09-29 21:37:49,771 - recipe_recommender.etl.fetch_user_interactions - INFO -    Processed 50,000 rows, found 0 matches...\n",
-            "2025-09-29 21:37:49,798 - recipe_recommender.etl.fetch_user_interactions - INFO - Found 74 recipe interactions for user afcacbe1-eaba-415f-b03e-14ed682af65e\n",
-            "2025-09-29 21:37:49,799 - recipe_recommender.etl.fetch_user_interactions - INFO -    Processed 63,662 total events\n",
-            "2025-09-29 21:37:49,799 - recipe_recommender.etl.fetch_user_interactions - INFO -    Time range: 2025-06-03 to 2025-08-24\n",
-            "2025-09-29 21:37:49,799 - recipe_recommender.etl.fetch_user_interactions - INFO -    Event breakdown: {'Recipe Added To Collections': 10, 'Recipe Removed From Collections': 2, 'Recipe Link Clicked': 31, 'Recipe Cook Started': 9, 'Recipe Cooked': 8, 'Recipe Search Queried': 14}\n",
-            "2025-09-29 21:37:49,800 - recipe_recommender.inference.recipe_scorer - INFO - Initializing Recipe Scorer\n",
-            "2025-09-29 21:37:49,801 - recipe_recommender.inference.recipe_scorer - INFO - Loading trained model components...\n",
-            "2025-09-29 21:37:49,804 - recipe_recommender.inference.recipe_scorer - INFO - Loaded LIGHTGBM model\n",
-            "2025-09-29 21:37:49,804 - recipe_recommender.inference.recipe_scorer - INFO - Loaded model metadata with 19 features\n",
-            "2025-09-29 21:37:49,814 - recipe_recommender.inference.recipe_scorer - INFO - Loaded raw recipe features from enhanced_recipe_features_from_db.csv\n",
-            "2025-09-29 21:37:49,815 - recipe_recommender.inference.recipe_scorer - INFO - Loaded 1967 recipes for scoring\n",
-            "2025-09-29 21:37:49,816 - recipe_recommender.inference.recipe_scorer - INFO - Scoring 1967 recipes for user\n"
+            "2025-09-30 12:36:02,978 - recipe_recommender.etl.fetch_user_interactions - INFO - Initialized UserInteractionFetcher\n",
+            "2025-09-30 12:36:02,980 - recipe_recommender.etl.fetch_user_interactions - INFO -    Events file: /Users/marcelqayoomtaylor/Documents/GitHub/PantryPalML/recipe_recommender/output/combined_events.csv\n",
+            "2025-09-30 12:36:02,980 - recipe_recommender.etl.fetch_user_interactions - INFO -    Tracking 8 event types\n",
+            "2025-09-30 12:36:02,981 - recipe_recommender.etl.fetch_user_interactions - INFO - Fetching interactions for user: afcacbe1-eaba-415f-b03e-14ed682af65e\n",
+            "2025-09-30 12:36:02,981 - recipe_recommender.etl.fetch_user_interactions - INFO - Reading events file in chunks\n",
+            "2025-09-30 12:36:03,081 - recipe_recommender.etl.fetch_user_interactions - INFO -    Processed 50,000 rows, found 0 matches...\n",
+            "2025-09-30 12:36:03,126 - recipe_recommender.etl.fetch_user_interactions - INFO - Found 74 recipe interactions for user afcacbe1-eaba-415f-b03e-14ed682af65e\n",
+            "2025-09-30 12:36:03,127 - recipe_recommender.etl.fetch_user_interactions - INFO -    Processed 63,662 total events\n",
+            "2025-09-30 12:36:03,129 - recipe_recommender.etl.fetch_user_interactions - INFO -    Time range: 2025-06-03 to 2025-08-24\n",
+            "2025-09-30 12:36:03,130 - recipe_recommender.etl.fetch_user_interactions - INFO -    Event breakdown: {'Recipe Added To Collections': 10, 'Recipe Removed From Collections': 2, 'Recipe Link Clicked': 31, 'Recipe Cook Started': 9, 'Recipe Cooked': 8, 'Recipe Search Queried': 14}\n",
+            "2025-09-30 12:36:03,131 - recipe_recommender.inference.recipe_scorer - INFO - Initializing Recipe Scorer\n",
+            "2025-09-30 12:36:03,132 - recipe_recommender.inference.recipe_scorer - INFO - Loading trained model components...\n",
+            "2025-09-30 12:36:03,137 - recipe_recommender.inference.recipe_scorer - INFO - Loaded LIGHTGBM model\n",
+            "2025-09-30 12:36:03,138 - recipe_recommender.inference.recipe_scorer - INFO - Loaded model metadata with 28 features\n",
+            "2025-09-30 12:36:03,152 - recipe_recommender.inference.recipe_scorer - INFO - Loaded raw recipe features from enhanced_recipe_features_from_db.csv\n",
+            "2025-09-30 12:36:03,155 - recipe_recommender.inference.recipe_scorer - INFO - Loaded 1967 recipes for scoring\n",
+            "2025-09-30 12:36:03,158 - recipe_recommender.inference.recipe_scorer - INFO - Loaded 21439 recipe-ingredient relationships\n",
+            "2025-09-30 12:36:03,159 - recipe_recommender.inference.recipe_scorer - INFO - Scoring 1967 recipes for user\n"
           ]
         },
         {
@@ -155,10 +156,10 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2025-09-29 21:37:49,892 - recipe_recommender.inference.recipe_scorer - INFO - Generated scores for 1967 recipes\n",
-            "2025-09-29 21:37:49,892 - recipe_recommender.inference.recipe_scorer - INFO -    Score range: -0.3207 - -0.3207\n",
-            "2025-09-29 21:37:49,892 - recipe_recommender.inference.recipe_scorer - INFO -    No threshold; selecting by top-N\n",
-            "2025-09-29 21:37:49,892 - recipe_recommender.inference.recipe_scorer - INFO -    Returning top 100 recommendations\n"
+            "2025-09-30 12:36:09,752 - recipe_recommender.inference.recipe_scorer - INFO - Generated scores for 1967 recipes\n",
+            "2025-09-30 12:36:09,752 - recipe_recommender.inference.recipe_scorer - INFO -    Score range: -2.2355 - 2.3711\n",
+            "2025-09-30 12:36:09,753 - recipe_recommender.inference.recipe_scorer - INFO -    No threshold; selecting by top-N\n",
+            "2025-09-30 12:36:09,753 - recipe_recommender.inference.recipe_scorer - INFO -    Returning top 100 recommendations\n"
           ]
         },
         {
@@ -197,33 +198,33 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>1201</td>\n",
-              "      <td>Vegan Cookie Dough Bars with Chocolate Chips</td>\n",
-              "      <td>-0.320706</td>\n",
+              "      <td>1915</td>\n",
+              "      <td>Chicken Katsu</td>\n",
+              "      <td>2.371124</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>1202</td>\n",
-              "      <td>Slow Cooker Wild Rice Pilaf</td>\n",
-              "      <td>-0.320706</td>\n",
+              "      <td>7</td>\n",
+              "      <td>Apple Cinnamon French Toast</td>\n",
+              "      <td>2.371124</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>1203</td>\n",
-              "      <td>Slow Cooker Triple Berry Crisp</td>\n",
-              "      <td>-0.320706</td>\n",
+              "      <td>275</td>\n",
+              "      <td>Chocolate Self Saucing Pudding</td>\n",
+              "      <td>2.371124</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>1204</td>\n",
-              "      <td>Peanut Butter Banana Toast with Granola and Honey</td>\n",
-              "      <td>-0.320706</td>\n",
+              "      <td>1099</td>\n",
+              "      <td>Tiramisu</td>\n",
+              "      <td>2.371124</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>1205</td>\n",
-              "      <td>Orange Rosé Wine Cake Soak</td>\n",
-              "      <td>-0.320706</td>\n",
+              "      <td>1333</td>\n",
+              "      <td>Cauliflower Hash Browns</td>\n",
+              "      <td>2.028807</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -233,33 +234,33 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>95</th>\n",
-              "      <td>1292</td>\n",
-              "      <td>Vegan Peanut Butter Cookies</td>\n",
-              "      <td>-0.320706</td>\n",
+              "      <td>1276</td>\n",
+              "      <td>Snickerdoodle Bread</td>\n",
+              "      <td>-2.235481</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>96</th>\n",
-              "      <td>1293</td>\n",
-              "      <td>Healthy Peanut Butter Oatmeal Cookies</td>\n",
-              "      <td>-0.320706</td>\n",
+              "      <td>1277</td>\n",
+              "      <td>Paleo Pumpkin Bread</td>\n",
+              "      <td>-2.235481</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>97</th>\n",
-              "      <td>1294</td>\n",
-              "      <td>Healthy Pumpkin Cookies</td>\n",
-              "      <td>-0.320706</td>\n",
+              "      <td>1278</td>\n",
+              "      <td>Pumpkin Granola</td>\n",
+              "      <td>-2.235481</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>98</th>\n",
-              "      <td>1295</td>\n",
-              "      <td>Healthy Hot Chocolate</td>\n",
-              "      <td>-0.320706</td>\n",
+              "      <td>1279</td>\n",
+              "      <td>Healthy Blueberry Muffins</td>\n",
+              "      <td>-2.235481</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>99</th>\n",
-              "      <td>1296</td>\n",
-              "      <td>Baked Peaches</td>\n",
-              "      <td>-0.320706</td>\n",
+              "      <td>1280</td>\n",
+              "      <td>Sugar Cookie Overnight Protein Oatmeal</td>\n",
+              "      <td>-2.235481</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -267,18 +268,18 @@
               "</div>"
             ],
             "text/plain": [
-              "   recipe_id                                        recipe_name     score\n",
-              "0       1201       Vegan Cookie Dough Bars with Chocolate Chips -0.320706\n",
-              "1       1202                        Slow Cooker Wild Rice Pilaf -0.320706\n",
-              "2       1203                     Slow Cooker Triple Berry Crisp -0.320706\n",
-              "3       1204  Peanut Butter Banana Toast with Granola and Honey -0.320706\n",
-              "4       1205                         Orange Rosé Wine Cake Soak -0.320706\n",
-              "..       ...                                                ...       ...\n",
-              "95      1292                        Vegan Peanut Butter Cookies -0.320706\n",
-              "96      1293              Healthy Peanut Butter Oatmeal Cookies -0.320706\n",
-              "97      1294                            Healthy Pumpkin Cookies -0.320706\n",
-              "98      1295                              Healthy Hot Chocolate -0.320706\n",
-              "99      1296                                      Baked Peaches -0.320706\n",
+              "   recipe_id                             recipe_name     score\n",
+              "0       1915                           Chicken Katsu  2.371124\n",
+              "1          7             Apple Cinnamon French Toast  2.371124\n",
+              "2        275          Chocolate Self Saucing Pudding  2.371124\n",
+              "3       1099                                Tiramisu  2.371124\n",
+              "4       1333                 Cauliflower Hash Browns  2.028807\n",
+              "..       ...                                     ...       ...\n",
+              "95      1276                     Snickerdoodle Bread -2.235481\n",
+              "96      1277                     Paleo Pumpkin Bread -2.235481\n",
+              "97      1278                         Pumpkin Granola -2.235481\n",
+              "98      1279               Healthy Blueberry Muffins -2.235481\n",
+              "99      1280  Sugar Cookie Overnight Protein Oatmeal -2.235481\n",
               "\n",
               "[100 rows x 3 columns]"
             ]
@@ -298,23 +299,23 @@
         "\n",
         "# Alternative: Auto-discover an active user from the event data\n",
         "# This code demonstrates how to find users with substantial interaction history\n",
-        "\"\"\"\n",
-        "import pandas as pd\n",
-        "try:\n",
-        "    events_path = config.output_dir / \"combined_events.csv\"\n",
-        "    if events_path.exists():\n",
-        "        df_head = pd.read_csv(events_path, nrows=10000)  # Sample for efficiency\n",
-        "        # Find users with most recipe interactions\n",
-        "        candidates = (\n",
-        "            df_head[df_head[\"event\"].isin(fetcher.recipe_events)][\"distinct_id\"]\n",
-        "            .value_counts().head(10)\n",
-        "        )\n",
-        "        if len(candidates) > 0:\n",
-        "            sample_user_id = candidates.index[0]\n",
-        "            print(f\"Auto-selected user with {candidates.iloc[0]} interactions\")\n",
-        "except Exception as e:\n",
-        "    print(\"Could not auto-select user:\", e)\n",
-        "\"\"\"\n",
+        "\n",
+        "# import pandas as pd\n",
+        "# try:\n",
+        "#     events_path = config.output_dir / \"combined_events.csv\"\n",
+        "#     if events_path.exists():\n",
+        "#         df_head = pd.read_csv(events_path, nrows=10000)  # Sample for efficiency\n",
+        "#         # Find users with most recipe interactions\n",
+        "#         candidates = (\n",
+        "#             df_head[df_head[\"event\"].isin(fetcher.recipe_events)][\"distinct_id\"]\n",
+        "#             .value_counts().head(10)\n",
+        "#         )\n",
+        "#         if len(candidates) > 0:\n",
+        "#             sample_user_id = candidates.index[0]\n",
+        "#             print(f\"Auto-selected user with {candidates.iloc[0]} interactions\")\n",
+        "# except Exception as e:\n",
+        "#     print(\"Could not auto-select user:\", e)\n",
+        "\n",
         "\n",
         "print(\"Generating recommendations for user:\", sample_user_id)\n",
         "\n",
@@ -366,11 +367,14 @@
             "\n",
             "3. Validating Recommendation Output...\n",
             "   ✓ Generated 100 recommendations\n",
+            "   ✓ Score range: -2.235481 to 2.371124 (variance: 4.606605)\n",
             "\n",
             "==================================================\n",
-            "⚠️  VALIDATION PASSED WITH WARNINGS\n",
-            "Warnings:\n",
-            "   - Warning: Very low score variance - model may not be discriminating\n"
+            "✅ VALIDATION PASSED\n",
+            "System Status: Ready for Production\n",
+            "\n",
+            "Example Output:\n",
+            "Top Recommendation: 'Chicken Katsu' (score: 2.371124)\n"
           ]
         }
       ],
