--- a/notebooks/A2_Production_EndToEnd.ipynb
+++ b/notebooks/A2_Production_EndToEnd.ipynb
@@ -16,6 +16,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Project Overview\n",
+        "This notebook demonstrates the development and deployment of a personalized recipe recommendation system for PantryPal. It shows how we:\n",
+        "- Transform real user interaction events and recipe metadata into ML-ready datasets\n",
+        "- Train a ranking model that optimizes top-N recommendation quality\n",
+        "- Save artifacts for production inference\n",
+        "- Generate real-time, personalized recommendations for a given user\n",
+        "\n",
+        "## Business Problem\n",
+        "PantryPal users interact with recipes via views, favorites, and cooking events. The goal is to predict which recipes a user is most likely to engage with next. This is a recommendation ranking problem focused on placing the most relevant recipes at the top of the list.\n",
+        "\n",
+        "## Outline\n",
+        "- Environment setup (Colab-compatible)\n",
+        "- Data preparation with `TrainingDataBuilder`\n",
+        "- Model training/evaluation with `RecipeRanker`\n",
+        "- Real-time inference with `RecipeScorer`\n",
+        "- System validation of artifacts and outputs\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
@@ -62,6 +84,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data Preparation Phase\n",
+        "### Objective\n",
+        "Transform raw user interaction events and recipe metadata into a structured ML dataset suitable for training a ranking model. This includes feature engineering, negative sampling, and creating train/validation/test splits.\n",
+        "\n",
+        "### Data Sources\n",
+        "- User interaction events (views, favorites, cooks)\n",
+        "- Recipe database (ingredients, timing, authors, tags)\n",
+        "- Recipe–ingredient relationships for content-based features\n",
+        "\n",
+        "The `TrainingDataBuilder` orchestrates this pipeline end-to-end.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {},
@@ -86,6 +124,20 @@
         "print(\" - output_dir:\", config.output_dir)\n",
         "print(\" - input_dir:\", config.input_dir)\n",
         "print(\" - model_dir:\", config.model_dir)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Model Training and Evaluation\n",
+        "### Objective\n",
+        "Train a Learning-to-Rank model using LightGBM's Lambdarank objective to optimize recommendation quality. The model learns to score user–recipe pairs so that more engaging recipes rank higher.\n",
+        "\n",
+        "### Model Architecture\n",
+        "- Algorithm: LightGBM Gradient Boosting with Lambdarank objective\n",
+        "- Optimization Target: NDCG@k\n",
+        "- Features: Combination of user behavior, recipe content, and compatibility signals\n"
       ]
     },
     {
@@ -203,6 +255,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Learning Task and Lambdarank\n",
+        "### Problem Formulation\n",
+        "- Input: User–recipe feature vectors with binary engagement labels (1 engaged, 0 otherwise)\n",
+        "- Output: Relevance scores for ranking recipes per user\n",
+        "- Objective: Learn a scoring function that optimizes top-N ranking\n",
+        "\n",
+        "### Why Lambdarank for Recommendations?\n",
+        "1. Metric alignment: directly optimizes ranking quality (NDCG)\n",
+        "2. Handles class imbalance and variable list lengths across users\n",
+        "3. Emphasizes top positions via NDCG weighting\n",
+        "\n",
+        "### Technical Notes\n",
+        "- Objective: `objective = \"lambdarank\"`, `metric = \"ndcg\"`\n",
+        "- Evaluated at k = (5, 10, 20)\n",
+        "- Training uses early stopping on validation NDCG\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {},
@@ -305,8 +378,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Real-Time Recommendation Generation\n",
+        "### Objective\n",
+        "Demonstrate how the trained model generates personalized recommendations in production.\n",
+        "\n",
+        "### Workflow\n",
+        "1. User Context Retrieval: Fetch interaction history from analytics\n",
+        "2. Model Loading: Load LightGBM model and metadata\n",
+        "3. Feature Engineering: Build user profile features on-the-fly\n",
+        "4. Recipe Scoring: Generate relevance scores for all recipes\n",
+        "5. Ranking & Selection: Return top-N recommendations\n",
+        "\n",
+        "`RecipeScorer` orchestrates this end-to-end.\n"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -493,7 +584,7 @@
         "result = scorer.get_user_recipe_recommendations(\n",
         "    user_id=sample_user_id,\n",
         "    interaction_history=interactions,\n",
-        "    n_recommendations=100,\n",
+        "    n_recommendations=10,\n",
         ")\n",
         "\n",
         "import pandas as pd\n",
@@ -503,6 +594,18 @@
         "else:\n",
         "    print(f\"Generated {len(recs)} personalized recommendations:\")\n",
         "    display(recs[[\"recipe_id\", \"recipe_name\", \"score\"]].head(100))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## System Validation\n",
+        "### Objective\n",
+        "Verify all necessary artifacts exist and the recommendation output looks sane.\n",
+        "- Checks model files and metadata\n",
+        "- Confirms recipe feature database exists\n",
+        "- Verifies recommendations were generated and have reasonable score variance\n"
       ]
     },
     {
